--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,17 +27,24 @@ android {
 }
 
 buildscript {
+    ext.kotlin_version = '1.0.0-beta-4584'
+    ext.anko_version = '0.8.1'
     repositories {
-        mavenCentral()
+        maven {
+            url "http://repo1.maven.org/maven2"
+        }
     }
     //add for kotlin
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.0-beta-4584'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
 }
 
 repositories {
-    mavenCentral()
+    maven {
+        url "http://repo1.maven.org/maven2"
+    }
 }
 
 dependencies {
@@ -45,6 +52,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:21.+'
 
+    compile	"com.android.support:recyclerview-v7:21.+"
+
     //add for kotlin
-    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.0-beta-4584'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile	"org.jetbrains.anko:anko-sdk15:$anko_version"
+    compile	"org.jetbrains.anko:anko-support-v4:$anko_version"
 }
